# amon-hen

./: .env.example  .gitignore  Dockerfile  README.md  amon-hen-spec.md  docker-compose.yml  pyproject.toml  sources.yaml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  api.ts  types.ts
dashboard/src/components/: ClusterDetail.tsx  ClusterMap.tsx  DigestView.tsx  SearchPanel.tsx  SourceHealth.tsx
src/amon_hen/: __init__.py  cli.py  config.py  models.py  scheduler.py
src/amon_hen/api/: __init__.py  server.py
src/amon_hen/enrichment/: __init__.py  embeddings.py  llm.py
src/amon_hen/intelligence/: __init__.py  anomalies.py  clustering.py  digest.py  divergence.py
src/amon_hen/sources/: __init__.py  bluesky.py  gdelt.py  reddit.py  rss.py
src/amon_hen/storage/: __init__.py  sqlite.py  vectors.py
tests/: conftest.py
tests/test_api/: test_server.py
tests/test_enrichment/: test_embeddings.py  test_llm.py
tests/test_intelligence/: test_anomalies.py  test_clustering.py  test_divergence.py
tests/test_sources/: test_dedup.py  test_gdelt.py  test_rss.py
tests/test_storage/: test_sqlite.py  test_vectors.py
